# GPT-CUDA-VS

./: Activity1.nvact  GPT-VS-EMPTY-CUDA.sln  README.md
GPT-VS-EMPTY-CUDA/: CMakeLists.txt  GPT-VS-EMPTY-CUDA.cpp  GPT-VS-EMPTY-CUDA.vcxproj  GPT-VS-EMPTY-CUDA.vcxproj.filters  allCUDAFunc.cu  cudaInclude.cuh  gAng1CUDA  gAng2CUDA  gAngWindows.txt  gCan1CUDA  gNor1  gNor2  init.cpp  init.cu  init.h  init_cuda.h  inteAngWindows.txt  main.h  parameter.h  stdInte.cpp  stdInte.cu  stdInte.cuh  stdInte.h  text.txt  utility.cpp  utility.h
GPT-VS-EMPTY-CUDA/sample_bikes/: img2_small2_test.pgm  img3_small2_test.pgm  img4_small2_test.pgm  img5_small2_test.pgm
GPT-VS-EMPTY-CUDA/sample_boat/: Untitled.ipynb  img1_small_test.pgm  img2_small2_test.pgm  img2_small2_test2.pgm  img3_small2_test.pgm  img3_small2_test2.pgm  img4_small2_test2.pgm  img5_small2_test.pgm  img5_small2_test2.pgm  img6_small2_test.pgm  img6_small2_test2.pgm
GPT-VS-EMPTY-CUDA/sample_graf/: img2_small2_test.pgm  img3_small2_test.pgm  img4_small2_test.pgm  img5_small2_test.pgm
GPT-VS-EMPTY-CUDA/sample_leuven/: img2_small2_test.pgm  img3_small2_test.pgm  img4_small2_test.pgm  img5_small2_test.pgm
GPT-VS-EMPTY-CUDA/sample_tree/: Untitled.ipynb
